--- a/.gitignore
+++ b/.gitignore
@@ -59,6 +59,7 @@ app.*.map.json
 *.iml
 *.ipr
 *.iws
+*.yaml
 .idea/
 
 # Visual Studio Code related
@@ -176,3 +177,5 @@ app.*.symbols
 !/packages/flutter_tools/test/data/dart_dependencies_test/**/.packages
 !/dev/ci/**/Gemfile.lock
 !.vscode/settings.json
+
+.metadata
