--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   http: ^0.13.5
   fluttertoast : ^8.2.1
   flutter_dotenv: ^5.0.2
+  flutter_secure_storage: ^8.0.0
 
 dev_dependencies:
   flutter_test:
