--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,7 +35,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   http: ^0.13.5
-  fluttertoast : ^8.2.1
+  fluttertoast: ^8.2.1
   flutter_dotenv: ^5.0.2
   flutter_secure_storage: ^8.0.0
 
@@ -57,41 +57,33 @@ dev_dependencies:
 # The following section is specific to Flutter packages.
 flutter:
 
-  # The following line ensures that the Material Icons font is
-  # included with your application, so that you can use the icons in
-  # the material Icons class.
   uses-material-design: true
   assets:
-    - images/
+    - asset/images/
     - .env
 
-  # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  fonts:
+    - family: Pretendard
+      fonts:
+        - asset: asset/font/Pretendard-Black.otf
+          weight: 900
+        - asset: asset/font/Pretendard-Bold.otf
+          weight: 800
+        - asset: asset/font/Pretendard-ExtraBold.otf
+          weight: 700
+        - asset: asset/font/Pretendard-Extralight.otf
+          weight: 600
+        - asset: asset/font/Pretendard-Light.otf
+          weight: 500
+        - asset: asset/font/Pretendard-Medium.otf
+          weight: 400
+        - asset: asset/font/Pretendard-Regularotf
+          weight: 300
+        - asset: asset/font/Pretendard-SemiBold.otf
+          weight: 200
+        - asset: asset/font/Pretendard-Thin.otf
+          weight: 100
 
-  # An image asset can refer to one or more resolution-specific "variants", see
-  # https://flutter.dev/assets-and-images/#resolution-aware
 
-  # For details regarding adding assets from package dependencies, see
-  # https://flutter.dev/assets-and-images/#from-packages
-
-  # To add custom fonts to your application, add a fonts section here,
-  # in this "flutter" section. Each entry in this list should have a
-  # "family" key with the font family name, and a "fonts" key with a
-  # list giving the asset and other descriptors for the font. For
-  # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
-  #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
